--- a/index.html
+++ b/index.html
@@ -33,9 +33,6 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav">	
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="index_es.html">See in Spanish</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#about" id="abo">About me</a>
           </li>
 	  <li class="nav-item">
@@ -121,22 +118,39 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto">
           <h2 class="mb-5">Work Experience</h2>
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+         
+	<div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+				<h3 class="mb-0">Tester & Automation Engineer</h3>
+				<h5 class="mb-4"><a class="link-size" href="https://www.mindata.es/" target="_blank"> Mindata (Barcelona, Spain)</a></h5>
+				<ul>
+					<li>Perform cross-browser, regression and exploratory testing of web and mobile application.</li>
+					<li>Bug tracking and reporting.</li>
+					<li>API testing.</li>
+					<li>Backend automation tests with Karate DSL</li>
+				</ul>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="date-title">May 2023 - Present</span>
+            </div>
+          </div>
+		
+	<div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
 				<h3 class="mb-0">Tech Lead</h3>
 				<h5 class="mb-4"><a class="link-size" href="https://www.mindata.es/" target="_blank"> Mindata (Barcelona, Spain)</a></h5>
 				<ul>
-					<li>Remove obstacles blocking the developers from achieving their tasks.</li>
-					<li>Follow ups on each developer tasks through the sprint and also their own professional development.</li>
-					<li>Make sure all processes and methodologies defined by the company are followed by the team.</li>
-					<li>Bug fixing.</li>
-					<li>Code Review.</li>
-					<li>Agile SCRUM.</li>
-					<li>Azure Devops for team planning and code development collaboration.</li>
+					<li>Task delegation in order to achieve the team's weekly and monthly goals.</li>
+					<li>Oversee code quality and functionality.</li>
+					<li>Guide the team with troubleshooting technical issues.</li>
+					<li>Bug fixing and development to support the team on congested deadlines.</li>
+					<li>Help to improve, optimize, and identify opportunities for software quality.</li>
+					<li>Collaborate with QA to ensure specifications and requirements are met in order to complete testing.</li>
+					<li>Write technical documentation.</li>
 				</ul>
             </div>
             <div class="resume-date text-md-right">
-              <span class="date-title">April 2021 - Present</span>
+              <span class="date-title">April 2021 - April 2023</span>
             </div>
           </div>
 
@@ -145,12 +159,14 @@
               <h3 class="mb-0">Fullstack Developer</h3>
               <h5 class="mb-4"><a class="link-size" href="https://www.mindata.es/" target="_blank"> Mindata (Barcelona, Spain)</a></h5>
 				<ul>
-					<li>Restful APIs and features implementation.</li>
-					<li>Issue analysis and solution proposals.</li>
-					<li>Code Review.</li>
+					<li>TDesign and implement RESTful APIs plus server-side logic to support front-end features.</li>
+					<li>Collaborate with front-end developers to integrate new server-side logic.</li>
+					<li>Maintain and improve existing backend logic.</li>
+					<li>Writing clean, functional and reusable code.</li>
+					<li>Code and UI review for consistency and functionality.</li>
+					<li>Collaborate with QA to ensure specifications and requirements were met in order to complete testing.</li>
 					<li>Bug fixing.</li>
-					<li>Agile SCRUM.</li>
-					<li>Use of Jira Atlassian as tasks managmentent tool.</li>
+					<li>Write technical documentation.</li>
 				</ul>
             </div>
             <div class="resume-date text-md-right">
@@ -161,30 +177,19 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-4">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Backend Developer</h3>
-			  <h5 class="mb-4"><a class="link-size" href="https://www.ceptinel.com/es" target="_blank"> Ceptinel RegTech (Chile)</a></h5>
+			  <h5 class="mb-4"><a class="link-size" href="https://www.ceptinel.com/es" target="_blank"> Freelance  (Around the world)</a></h5>
               <p class="text-justify mb-0"> </p>
 				<ul>
-					<li>Feature development/bug fixing in web-based app using Java EE, Hibernate and Postgres.</li>
+					<li>Design and implement RESTful APIs based on the technical needs of stakeholders.</li>
+					<li>Develop and maintain new and existing functionalities of web-based applications.</li>
+					<li>Collaborate with front-end developers to integrate new server-side logic.</li>
+					<li>Test applications to check for any issues and weaknesses.</li>
+					<li>Bug fixing.</li>
+					<li>Create and maintain software documentation.</li>
 				</ul>
             </div>
             <div class="resume-date text-md-right">
-              <span class="date-title">October 2018 - December 2019</span>
-            </div>
-          </div>
-		
-          <div class="resume-item d-flex flex-column flex-md-row mb-4">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Backend Developer</h3>
-			  <h5 class="mb-4"><a class="link-size" href="http://youlifer.com" target="_blank"> Lifer (Argentina) </a></h5>
-              <p class="text-justify mb-0"> Freelance social network application project 
-				<a href="https://play.google.com/store/apps/details?id=lifer.ucard" target="_blank"> <strong>uCard</strong></a>.
-			  </p>
-				<ul>
-					<li>Restful APIs development/ bug fixing using Java and Spring Boot, MongoDB for a social network application.</li>
-				</ul>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="date-title">March 2018 - December 2018</span>
+              <span class="date-title">March 2018 - December 2019</span>
             </div>
           </div>
 
@@ -193,12 +198,11 @@
               <h3 class="mb-0">Fullstack Developer</h3>
 			  <h5 class="mb-4"><a class="link-size" href="https://www.intelix.biz/site/public/" target="_blank"> Intelix Synergy C.A. (Valencia, Venezuela)</a></h5>
 			  <ul>
-				<li>Fullstack Development for a security and administrative web app for an international financial entity using Java, Spring Boot and Vaadin Frameworks.</li>
-				<li>Vaadin web components developing.</li>
-				<li>Project Management with Maven.</li>
-				<li>Version Control with Git and Subversion.</li>
-				<li>UI Design.</li>
-				<li>Agile SCRUM.</li>
+				<li>Design and implement RESTful APIs based on technical requirements.</li>
+				<li>Integrate data from various back-end web services and databases.</li>
+				<li>UI review for consistency and functionality plus style enhancement.</li>
+				<li>UI components development with Vaadin framework.</li>
+				<li>Use of agile practices.</li>
 			  </ul>
             </div>
             <div class="resume-date text-md-right">
@@ -211,13 +215,11 @@
               <h3 class="mb-0">Fullstack Developer</h3>
 			  <h5 class="mb-4"><a class="link-size" href="https://www.pt.com.ve/ptv1/qsomos.php" target="_blank"> Promotora Tantalo C.A. (Valencia, Venezuela)</a></h5>
 			  <ul>
-				<li>Fullstack Development for a security and administrative web app for an international financial entity using Java, Spring Boot and Vaadin Frameworks.</li>
-				<li>Vaadin web components developing.</li>
-				<li>Project Management with Maven.</li>
-				<li>Version Control with Git and Subversion.</li>
-				<li>UI Design.</li>
-				<li>Tech Lead of small groups of interns.</li>
-				<li>Agile SCRUM.</li>
+				<li>Design and implement RESTful APIs based on technical requirements.</li>
+				<li>Integrate data from various back-end web services and databases.</li>
+				<li>UI review for consistency and functionality plus style enhancement.</li>
+				<li>UI components development with Vaadin framework.</li>
+				<li>Use of agile practices.</li>
 			  </ul>
             </div>
             <div class="resume-date text-md-right">
@@ -228,9 +230,12 @@
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Web Developer Junior</h3>
-			  <h5 class="mb-4"><a class="link-size" href="#">Sluxnet C.A. (Valencia, Venezuela)</a></h5>
-			  <p class="text-justify">Outsourcing in development of small applications and systems analyst for a company in the automotive sector.</p>
-            </div>
+			<h5 class="mb-4"><a class="link-size" href="#">Sluxnet C.A. (Valencia, Venezuela)</a></h5>
+			<ul>
+				<li>Work with stakeholders to gather specifications and requirements to develop web solutions based on the company's needs.</li>
+				<li>Fix any existing application issues to keep the working flow unblocked for final users within the company.</li>
+			</ul>
+	    </div>
             <div class="resume-date text-md-right">
               <span class="date-title">September 2014 - April 2016</span>
             </div>
@@ -270,13 +275,11 @@
 		<li class="list-inline-item">              
            <i class="devicon-express-original"></i>
             </li>
-	  <li class="list-inline-item">              
-           <i class="devicon-mocha-plain"></i>
-            </li>
-		  		      	    <li class="list-inline-item">              
+
+	<li class="list-inline-item">              
             <i class="devicon-docker-plain"></i>
             </li>
-			<li class="list-inline-item">
+	<li class="list-inline-item">
               <i class="devicon-bootstrap-plain"></i>
             </li>
             <li class="list-inline-item">
@@ -294,14 +297,17 @@
             <li class="list-inline-item">
                 <i class="devicon-mysql-plain"></i>
             </li>
-		              <li class="list-inline-item">
+	<li class="list-inline-item">
                <i class="devicon-postgresql-plain"></i>
             </li>
-		  		              <li class="list-inline-item">
-               <i class="devicon-confluence-original"></i>
-            </li>
-		  		  		              <li class="list-inline-item">
+	 <li class="list-inline-item">
                <i class="devicon-jira-plain"></i>
+            </li>
+	 <li class="list-inline-item">
+            <i class="devicon-cypressio-plain"></i>
+            </li>
+	<li class="list-inline-item">
+            <i class="devicon-postman-plain"></i>
             </li>
           </ul>		  
         </div>
