--- a/index.html
+++ b/index.html
@@ -83,21 +83,14 @@
 		  <div class="small-heading mb-3"> 
 			Working remotely from <strong>Valencia, Venezuela &#127757;</strong>
 		  </div>
-		  <div class="small-heading mb-3"> 
-			<strong>Working experecience: 8+ years</strong> 
-		  </div>
 		  
 		  <p class="text-justify">
-			A hardworking and committed individual that loves making ideas contributions, getting involved in all aspects of a project planning and development, learn new things and eager to be challenged in order to grow and continue to expand my skillset.
-		  </p>		  
+			A software engineer with 8+ years of working experience. I’m currently working as a test and automation engineer and I also have a background as fullstack developer.		  </p>		  
 		  <p class="text-justify">
 		  </p>
 		  <p class="text-justify">
 			When I'm away from the keyboard, you know, in <strong>my "spare" time</strong>, i enjoy watching <strong>football</strong> &#9917; (my favorite sport!!), watch a <strong>good movie</strong> &#x1F3AC;, 
 			TV serie or play <strong>chess</strong> &#9822;, eating a good pizza &#x1F355;. And i also like spending time on trying to bring ideas to life by building my own projects &#128161;.
-		  </p>
-		  <p class="text-justify">
-		  	🌱 Currently, I'm sharpening my skillset with ReactJS, NodeJS + Express, Docker. 
 		  </p>
 		  <div class="subheading mt-4 mb-2"><strong>The languages <span class="text-primary">I speak</span></strong></div>
           <ul class="list-unstyled mb-3">
