--- a/index.html
+++ b/index.html
@@ -114,6 +114,16 @@
          
 	<div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
+				<h3 class="mb-0">Mindata</h3>
+				<h5 class="mb-4"><a class="link-size" href="https://www.mindata.es/" target="_blank">Barcelona, Spain</a></h5>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="date-title">April 2020 - Present</span>
+            </div>
+          </div>
+		
+	<div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
 				<h3 class="mb-0">Tester & Automation Engineer</h3>
 				<h5 class="mb-4"><a class="link-size" href="https://www.mindata.es/" target="_blank"> Mindata (Barcelona, Spain)</a></h5>
 				<ul>
