--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
 	<div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
 				<h3 class="mb-0">Tester & Automation Engineer</h3>
-				<h5 class="mb-4"><a class="link-size" href="https://www.mindata.es/" target="_blank"> Mindata (Barcelona, Spain)</a></h5>
+		    		<h5 class="mb-4">At RIU Hotels</h5>
+				<h5 class="mb-4">May 2023 - Present</h5>
 				<ul>
 					<li>Perform cross-browser, regression and exploratory testing of web and mobile application.</li>
 					<li>Bug tracking and reporting.</li>
@@ -133,15 +134,13 @@
 					<li>Backend automation tests with Karate DSL</li>
 				</ul>
             </div>
-            <div class="resume-date text-md-right">
-              <span class="date-title">May 2023 - Present</span>
-            </div>
           </div>
 		
 	<div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
 				<h3 class="mb-0">Tech Lead</h3>
-				<h5 class="mb-4"><a class="link-size" href="https://www.mindata.es/" target="_blank"> Mindata (Barcelona, Spain)</a></h5>
+		    		<h5 class="mb-4">At RiskIQ a Microsoft Company</h5>
+				<h5 class="mb-4">May 2023 - Present</h5>
 				<ul>
 					<li>Task delegation in order to achieve the team's weekly and monthly goals.</li>
 					<li>Oversee code quality and functionality.</li>
