--- a/index.html
+++ b/index.html
@@ -125,8 +125,7 @@
 	<div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
 				<h3 class="mb-0">Tester & Automation Engineer</h3>
-		    		<h5 class="mb-4">At RIU Hotels</h5>
-				<h5 class="mb-4">May 2023 - Present</h5>
+		    		<h5 class="mb-4">At RIU Hotels / May 2023 - Present</h5>
 				<ul>
 					<li>Perform cross-browser, regression and exploratory testing of web and mobile application.</li>
 					<li>Bug tracking and reporting.</li>
@@ -139,8 +138,7 @@
 	<div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
 				<h3 class="mb-0">Tech Lead</h3>
-		    		<h5 class="mb-4">At RiskIQ a Microsoft Company</h5>
-				<h5 class="mb-4">May 2023 - Present</h5>
+		    		<h5 class="mb-4">At RiskIQ a Microsoft Company / April 2021 - April 2023</h5>
 				<ul>
 					<li>Task delegation in order to achieve the team's weekly and monthly goals.</li>
 					<li>Oversee code quality and functionality.</li>
@@ -151,15 +149,12 @@
 					<li>Write technical documentation.</li>
 				</ul>
             </div>
-            <div class="resume-date text-md-right">
-              <span class="date-title">April 2021 - April 2023</span>
-            </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Fullstack Developer</h3>
-              <h5 class="mb-4"><a class="link-size" href="https://www.mindata.es/" target="_blank"> Mindata (Barcelona, Spain)</a></h5>
+             	<h5 class="mb-4">At RiskIQ a Microsoft Company / March 2020 - April 2021</h5>
 				<ul>
 					<li>TDesign and implement RESTful APIs plus server-side logic to support front-end features.</li>
 					<li>Collaborate with front-end developers to integrate new server-side logic.</li>
@@ -170,9 +165,6 @@
 					<li>Bug fixing.</li>
 					<li>Write technical documentation.</li>
 				</ul>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="date-title">March 2020 - April 2021</span>
             </div>
           </div>
 		
