--- a/index.html
+++ b/index.html
@@ -303,6 +303,9 @@
 	<li class="list-inline-item">
             <i class="devicon-postman-plain"></i>
             </li>
+		  	<li class="list-inline-item">
+            <i class="devicon-karatelabs-plain"></i>
+                      </li>
           </ul>		  
         </div>
       </section>		  
