--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#about" id="abo">About me</a>
           </li>
-	  <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#experience" id="exp">Work Experience</a>
-          </li>
-          <li class="nav-item">
+	 <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#skills" id="sk">Skills</a>
-          </li>		  
+          </li>	
+	  <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#experience" id="exp">Career Summary</a>
+          </li>	  
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#awards" id="aw">Education</a>
           </li>		  
@@ -107,6 +107,80 @@
 
         </div>
       </section>  
+
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
+        <div class="my-auto">
+          <h2 class="mb-0">Main Skills</h2>
+		  <p class="small-heading text-justify mb-3">Check out some of my main areas of knowledge with programming languages, frameworks &amp; tools</p>
+          <ul class="list-inline list-icons mb-4">
+            <li class="list-inline-item">
+				<i class="devicon-java-plain"></i>
+            </li>
+            <li class="list-inline-item">
+				<i class="devicon-spring-plain"></i>
+            </li>
+		              <li class="list-inline-item">
+				<i class="devicon-jetbrains-plain"></i>
+            </li>
+		  		              <li class="list-inline-item">
+				<i class="devicon-vscode-plain"></i>
+            </li>
+			<li class="list-inline-item">
+				<i class="devicon-mongodb-plain"></i>
+            </li>			
+			<li class="list-inline-item">
+              <i class="devicon-react-plain"></i>
+            </li>
+			<li class="list-inline-item">
+              <i class="devicon-javascript-plain"></i>
+            </li>
+		      	    <li class="list-inline-item">              
+            <i class="devicon-nodejs-plain"></i>
+            </li>
+		<li class="list-inline-item">              
+           <i class="devicon-express-original"></i>
+            </li>
+
+	<li class="list-inline-item">              
+            <i class="devicon-docker-plain"></i>
+            </li>
+	<li class="list-inline-item">
+              <i class="devicon-bootstrap-plain"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="devicon-git-plain"></i>
+            </li>
+			<li class="list-inline-item">
+              <i class="devicon-github-plain"></i>
+            </li>
+			<li class="list-inline-item">
+              <i class="devicon-bitbucket-plain"></i>
+            </li>						
+            <li class="list-inline-item">
+              <i class="devicon-php-plain"></i>
+            </li>
+            <li class="list-inline-item">
+                <i class="devicon-mysql-plain"></i>
+            </li>
+	<li class="list-inline-item">
+               <i class="devicon-postgresql-plain"></i>
+            </li>
+	 <li class="list-inline-item">
+               <i class="devicon-jira-plain"></i>
+            </li>
+	 <li class="list-inline-item">
+            <i class="devicon-cypressio-plain"></i>
+            </li>
+	<li class="list-inline-item">
+            <i class="devicon-postman-plain"></i>
+            </li>
+		  	<li class="list-inline-item">
+            <i class="devicon-karatelabs-plain"></i>
+                      </li>
+          </ul>		  
+        </div>
+      </section>
+	    
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto">
@@ -234,79 +308,6 @@
               <span class="date-title">September 2014 - April 2016</span>
             </div>
           </div>
-        </div>
-      </section>
-	  	
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
-        <div class="my-auto">
-          <h2 class="mb-0">Main Skills</h2>
-		  <p class="small-heading text-justify mb-3">Check out some of my main areas of knowledge with programming languages, frameworks &amp; tools</p>
-          <ul class="list-inline list-icons mb-4">
-            <li class="list-inline-item">
-				<i class="devicon-java-plain"></i>
-            </li>
-            <li class="list-inline-item">
-				<i class="devicon-spring-plain"></i>
-            </li>
-		              <li class="list-inline-item">
-				<i class="devicon-jetbrains-plain"></i>
-            </li>
-		  		              <li class="list-inline-item">
-				<i class="devicon-vscode-plain"></i>
-            </li>
-			<li class="list-inline-item">
-				<i class="devicon-mongodb-plain"></i>
-            </li>			
-			<li class="list-inline-item">
-              <i class="devicon-react-plain"></i>
-            </li>
-			<li class="list-inline-item">
-              <i class="devicon-javascript-plain"></i>
-            </li>
-		      	    <li class="list-inline-item">              
-            <i class="devicon-nodejs-plain"></i>
-            </li>
-		<li class="list-inline-item">              
-           <i class="devicon-express-original"></i>
-            </li>
-
-	<li class="list-inline-item">              
-            <i class="devicon-docker-plain"></i>
-            </li>
-	<li class="list-inline-item">
-              <i class="devicon-bootstrap-plain"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicon-git-plain"></i>
-            </li>
-			<li class="list-inline-item">
-              <i class="devicon-github-plain"></i>
-            </li>
-			<li class="list-inline-item">
-              <i class="devicon-bitbucket-plain"></i>
-            </li>						
-            <li class="list-inline-item">
-              <i class="devicon-php-plain"></i>
-            </li>
-            <li class="list-inline-item">
-                <i class="devicon-mysql-plain"></i>
-            </li>
-	<li class="list-inline-item">
-               <i class="devicon-postgresql-plain"></i>
-            </li>
-	 <li class="list-inline-item">
-               <i class="devicon-jira-plain"></i>
-            </li>
-	 <li class="list-inline-item">
-            <i class="devicon-cypressio-plain"></i>
-            </li>
-	<li class="list-inline-item">
-            <i class="devicon-postman-plain"></i>
-            </li>
-		  	<li class="list-inline-item">
-            <i class="devicon-karatelabs-plain"></i>
-                      </li>
-          </ul>		  
         </div>
       </section>		  
 
