--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 				</a>
             </li>
             <li class="list-inline-item">
-				<a href="https://github.com/ypetrilli?tab=repositories" target="_blank" data-toggle="tooltip" data-placement="top" title="Check my projects!">
+				<a href="https://github.com/ypdev19?tab=repositories" target="_blank" data-toggle="tooltip" data-placement="top" title="Check my projects!">
           				  <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="github repos" width="25" height="25" />          
 				</a>
             </li>
