--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <span class="text-primary">Petrilli</span>
           </h1>
           <div class="subheading mt-3">
-			<strong>Fullstack Developer</strong>
+			<strong>Software Engineer</strong>
 		  </div>
 		  <ul class="list-inline list-social-icons mb-4">
 			<li class="list-inline-item">
