--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 		  </div>
 		  
 		  <p class="text-justify">
-			A software engineer with 8+ years of working experience. I’m currently working as a test and automation engineer and I also have a background as fullstack developer.		  </p>		  
+			A software engineer with 8+ years of working experience. I’m currently working as a test and automation engineer and I also have a large background as fullstack developer.		  </p>		  
 		  <p class="text-justify">
 		  </p>
 		  <p class="text-justify">
@@ -317,7 +317,7 @@
 			<p class="small-heading text-justify mb-5">Here are some important professional accomplishments</p>
 			<div class="resume-item d-flex flex-column flex-md-row mb-4">
 				<div class="resume-content mr-auto">
-					<h3 class="mb-2">Computer Engineer</h3>
+					<h3 class="mb-2">Software Engineer</h3>
 					<p class="text-justify"> &#127891; College degree at <strong>Jose Antonio Paez University</strong> (November 2009 - October 2014)</strong></p>
 				</div>
 			</div>
